RemoteMacViews: Strip language code out of language ID when setting locale

MacOS may return more than just the language code for the user's preferred
language IDs. This CL removes the excess data so we can operate on just
the preferred language code.

Before: https://bugs.chromium.org/p/chromium/issues/attachment?aid=372905&signed_aid=JtAfFDt-hrRQP2xuspyhxw==&inline=1
After: https://bugs.chromium.org/p/chromium/issues/attachment?aid=372906&signed_aid=d6YDIxqJ7JT0Q6kU6jd7Vw==&inline=1

Bug: 913345
Change-Id: I80225a5e3b6c12484e45a5a9b53a4d61fc85102a
Reviewed-on: https://chromium-review.googlesource.com/c/1389477
Commit-Queue: Alan Cutter <alancutter@chromium.org>
Reviewed-by: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620964}
Former-commit-id: 0322dd07e0faba527507505eed07782f5e7dd761